Temp horizontal scroll bug fix

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,4 +1,5 @@
 [data-about-section] {
+    height: fit-content;
     width: 100%;
     background-color: #f2f2f2;
 
